# personal

Simpletron/compiler/: Makefile  compiler.cpp  compiler.h  main.cpp  smlcompiler  symbol.cpp  symbol.h
Simpletron/interpreter/: Makefile  calculator.cpp  calculator.h  definitions.h  machine.cpp  machine.h  main.cpp  readme  simpletron  todo
cpp/: BinaryText.cpp  TextBinary.cpp  a.cpp  calc.cpp  calculator.cpp  circle_area.cpp  clock.cpp  filetest.cpp  fstream.cpp  other.cpp  plusplus.cpp  randnum.cpp  rules_comparison.cpp  stdstringtok.cpp  stringtest.cpp  system.cpp  systemtest.cpp  test.cpp  vector.cpp
cpp/ac_calc/: ac_calc  ac_calc.cpp  calc_section.h  formula_section.h  help_section.h
cpp/autopoker/: autopoker  autopoker.sav  community_cards.h  definitions.h  main.cpp  player.h  table.txt
cpp/calc/: Num.cpp  Num.h  calc  main.cpp
cpp/hprinter/: CMakeLists.txt  Text File  main.cpp
euler/: 1.cpp  10.py  11.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.cpp  20.py  21.py  22.py  23.py  3.cpp  3.py  4.py  5.py  6.py  7.py  8.py  9.py  e10.py  e11.py  e12.py  e13.py  e14.py  e15.py  e16.py  e17.py  e18.py  e19.py  e20.py  e21.py  e22.py  e23.py  e24.py  e25.py  e26.py  (+10 more)
html/: page.htm  webserver.py
kcontact/kcontact/src/: CMakeLists.txt  contactdatabase.cpp  contactdatabase.h  contactdialog.cpp  contactdialog.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h
pylib/: mathfn.py  prime.py
python/: db_demo.py  pygtk_demo.py
tictactoe_cli/: Board.cpp  Board.h  Game.cpp  Game.h  Makefile  Player.cpp  Player.h  main.cpp
(+100 files in other folders)
